fix:resize and align cards

--- a/style.scss
+++ b/style.scss
@@ -46,14 +46,16 @@ li {
 
 //CONTAINER:
 
-.img-fluid {
-  width: 100%;
-  height: auto;
+.img-fluid.nebula {
+margin-bottom: 20%;
 }
 
 .img-fluid.tagged {
-  width: auto;
-  height: 50%;
+  height: 95%;
+}
+
+.img-fluid.foodie {
+  margin-bottom: 2%;
 }
 
 #projects {
@@ -61,7 +63,8 @@ li {
   flex-direction: column;
   align-items: center;
   position: relative;
-  top: 5%;
+  top: 3%;
+  left: 50%;
 }
 
 .container {
@@ -255,9 +258,10 @@ section.article2:nth-child(2) {
 
 section#article3:nth-child(3) {
   display: flex;
-  background: rgb(230,250,255);
-background: linear-gradient(180deg, rgba(230,250,255,0.6741071428571428) 0%, rgba(155,222,237,0.8337710084033614) 100%);
+  background: rgb(236,244,246);
+background: linear-gradient(180deg, rgba(236,244,246,0.6741071428571428) 0%, rgba(155,222,237,0.8337710084033614) 100%);
 }
+
 
 section#article4:nth-child(4) {
   // background-image: url('https://source.unsplash.com/vPOYZac2hiE/1920x1080');
@@ -452,15 +456,24 @@ section#article4:nth-child(4) {
   margin-left: 13%;
 }
 
+.card-body {
+  background-color: #f5f5f5;
+  // padding: 20px;
+}
+
+.card {
+  background-color: #f5f5f5;
+}
+
 .card-text {
   font-size: 19px;
-  margin: 10%;
+  margin: 5%;
+  background-color: #f5f5f5;
 }
 .card-text#tagged {
   color: #000000;
   font-size: 15px;
-  margin: 4%;
-  margin-bottom: 18%;
+  // padding-bottom: 6%;
   text-shadow: 0 1px 1px #fff;
 }
 .card-title {
@@ -472,6 +485,10 @@ section#article4:nth-child(4) {
 button {
   display: inline-block;
   margin: auto;
+}
+
+.btn-primary{
+  margin-bottom:20px;
 }
 
 .btn.btn-primary {
